[package]
name = "hft-channel"
version = "0.2.1"
edition = "2024"
authors = ["IKH Software, Inc. <support@ikhsoftware.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/ikhomyakov/hft-channel.git"
keywords = ["hft", "low-latency", "real-time", "ring-buffer", "spmc"]
categories = ["concurrency", "data-structures", "memory-management"]
description = "SPMC broadcast channel for HFT and real-time systems"
readme = "README.md"

[dependencies]
clap = "4.5.53"
crossbeam-utils = "0.8.21"
libc = "0.2.177"

[dev-dependencies]
core_affinity = "0.8.3"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }

